tests/fixtures/stl/errors/test_undefined_record.stl
// Error: reference to undefined record
// expect-error: Cannot resolve reference to 'NonExistentRecord'
prompt broken {
  is {
    item is NonExistentRecord;
  }
}
export broken as main;
